--- a/index.html
+++ b/index.html
@@ -10,7 +10,33 @@
 </head>
 <body>
     <header>
-
+        <div class="container">
+            <div class="header-wrapper">
+                <img src="" alt="Евклид - проектные системы">
+                <nav class="">
+                    <ul>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                        <li>
+                            <a href=""></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
     <main>
 
