--- a/index.html
+++ b/index.html
@@ -10,36 +10,77 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="header-wrapper">
-                <img src="" alt="Евклид - проектные системы">
-                <nav class="">
-                    <ul>
-                        <li>
-                            <a href=""></a>
+        <nav class="header-nav">
+            <div class="container">
+                <div class="nav-wrapper">
+                    <ul class="header-list">
+                        <li class="header-list__item">
+                            <a href="#">
+                                <img src="/src/img/content/header-logo.svg" alt="Евклид - Проектные системы">
+                            </a>
                         </li>
-                        <li>
-                            <a href=""></a>
+                        <li class="header-list__item">
+                            <a href="#">
+                                О нас
+                            </a>
                         </li>
-                        <li>
-                            <a href=""></a>
+                        <li class="header-list__item">
+                            <a href="#">
+                                Проекты
+                            </a>
                         </li>
-                        <li>
-                            <a href=""></a>
+                        <li class="header-list__item">
+                            <a href="#">
+                                Этапы
+                            </a>
                         </li>
-                        <li>
-                            <a href=""></a>
+                        <li class="header-list__item">
+                            <a href="#">
+                                Отзывы
+                            </a>
                         </li>
-                        <li>
-                            <a href=""></a>
+                        <li class="header-list__item">
+                            <a href="#">
+                                Контакты
+                            </a>
+                        </li>
+                        <li class="header-list__item">
+                            <button type="button">
+                                <img src="/src/img/decor/Search.svg" alt="Поиск">
+                            </button>
                         </li>
                     </ul>
-                </nav>
+                </div>
             </div>
-        </div>
+        </nav>
     </header>
     <main>
 
+        <section class="promo">
+            <div class="container">
+                <div class="promo-container">
+                    <h1 class="mein-title">
+                        Проектные решения любой сложности
+                    </h1>
+                    <p class="promo-description">
+                        Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом
+                        проектантов
+                    </p>
+                    <a href="#" class="promo-button">
+                        Заказать рассчет
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="about">
+            <h3 class="section-header">
+                О нас
+            </h3>
+            <p >
+
+            </p>
+        </section>
     </main>
     <footer>
 
