--- a/index.html
+++ b/index.html
@@ -60,23 +60,47 @@
                         проектантов
                     </p>
                     <a href="#" class="promo-button">
-                        Заказать рассчет
+                        Заказать расчет
                     </a>
                 </div>
-                
             </div>
         </section>
 
         <section class="about">
             <div class="container">
-                <h3 class="section-title">
+                <h3 class="section-title about-title">
                     О нас
                 </h3>
-                <p>
-    
+                <p class="about__discription">
+                    Также как перспективное планирование создаёт необходимость включения в производственный план целого
+                    ряда внеочередных мероприятий с учётом комплекса экспериментов, поражающих по своей масштабности и
+                    грандиозности. А также диаграммы связей могут быть описаны максимально подробно. Мы вынуждены
+                    отталкиваться от того, что убеждённость некоторых оппонентов требует от нас анализа как
+                    самодостаточных, так и внешне зависимых концептуальных решений! Следует отметить, что
+                    высококачественный прототип <button type="button" class="tip"></button> будущего проекта
+                    предопределяет высокую востребованность позиций,
+                    занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что
+                    высококачественный прототип будущего проекта способствует повышению качества экспериментов.
                 </p>
+
+                <article class="approaches">
+                    <div class="approaches-wrapper">
+                        <div class="approaches-picture">
+                            <div class="approaches-picture__content">
+                                <p>
+                                    Принимая во внимание показатели успешности, перспективное планирование способствует
+                                    подготовке и реализации новых принципов.
+                                </p>
+                                <a href="#">
+                                    Подробнее
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </div>
         </section>
+
     </main>
     <footer>
 
