--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <ul class="main-header-list">
                 <li class="main-header-list__item">
-                    <a href="#" class="main-header-nav__link">
+                    <a href="#about" class="main-header-nav__link">
                         О нас
                     </a>
                 </li>
@@ -68,7 +68,7 @@
 
         <section class="about">
             <div class="container">
-                <h3 class="section-title about-title">
+                <h3 id="about" class="section-title about-title">
                     О нас
                 </h3>
                 <p class="about__discription">
@@ -87,18 +87,90 @@
                     <div class="approaches-wrapper">
                         <div class="approaches-picture">
                             <div class="approaches-picture__content">
-                                <p>
-                                    Принимая во внимание показатели успешности, перспективное планирование способствует
-                                    подготовке и реализации новых принципов.
-                                </p>
-                                <a href="#">
-                                    Подробнее
-                                </a>
+                                    <p>
+                                        Принимая во внимание показатели успешности, перспективное планирование способствует
+                                        подготовке и реализации новых принципов.
+                                    </p>
+                                    <a href="#" class="more-btn">
+                                        Подробнее
+                                    </a>
                             </div>
+                        </div>
+                        <div class="approaches-list">
+                            <ul class="approaches-items">
+                                <li class="approaches-items__item consult-approach">
+                                    <div class="approaches-item-wrapper">
+                                        <h4 class="inner-title approaches-item-title">
+                                            Консультация с широким активом
+                                        </h4>
+                                        <p>
+                                            А также свежий взгляд на привычные вещи - безусловно открывает новые горизонты для как самодостаточных, так и внешне зависимых концептуальных решений.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="approaches-list__item improve-approach">
+                                    <div class="approaches-item-wrapper">
+                                        <h4 class="inner-title approaches-item-title">
+                                            В своём стремлении повысить
+                                        </h4>
+                                        <p> 
+                                            Качество жизни, они забывают, что сплочённость команды профессионалов представляет собой интересный эксперимент проверки прогресса профессионального сообщества
+                                        </p>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </article>
             </div>
+        </section>
+
+        <section class="our-work">
+
+            <div class="container">
+                <h3 class="section-title our-work-title">
+                    Как мы работаем
+                </h3>
+                <div class="work-steps-panel">
+                    <ul class="work-steps">
+                        <li class="work-steps__step active">
+                            <a>1 шаг</a>
+                        </li>
+                        <li class="work-steps__step">
+                            <a>2 шаг</a>
+                        </li>
+                        <li class="work-steps__step">
+                            <a>3 шаг</a>
+                        </li>
+                        <li class="work-steps__step">
+                            <a>4 шаг</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="step-wrapper">
+                    <div class="step-content">
+                        <h4 class="inner-title step-content__title">
+                            Проводим консультацию
+                        </h4>
+                        <p class="step-content__description">
+                            Влечет за собой процесс внедрения и модернизации приоритизации разума над эмоциями. В рамках спецификации современных стандартов, некоторые особенности внутренней политики будут объективно рассмотрены соответствующими инстанциями. 
+                            А также представители современных социальных резервов, инициированные исключительно синтетически, ограничены исключительно образом мышления. 
+                            Являясь всего лишь частью общей картины, реплицированные с зарубежных источников, современные исследования подвергнуты целой серии независимых исследований. 
+                            Кстати, &nbsp;стремящиеся вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, призваны к ответу. 
+                        </p>
+                        <a class="more-btn step-content__more" href="#">
+                            Подробнее
+                        </a>
+                        <a class="more-btn step-content__contract" href="#">
+                            Договор
+                        </a>
+                    </div>
+                    <div class="step-image">
+                        <img src="/src/img/decor/stages-img.jpg" alt="Изображение этапа">
+                    </div>
+                </div>
+            </div>
+            
         </section>
 
     </main>
