almost ready static

--- a/index.html
+++ b/index.html
@@ -173,8 +173,150 @@
             
         </section>
 
+        <section class="faq">
+            <div class="container">
+                <h3 class="section-title faq-title">
+                    Часто задаваемые вопросы
+                </h3>
+                <ul class="faq-list">
+                    <li class="faq-list__item">
+                        <h4 class=" inner-title faq__question">
+                            Из чего формируется конечная стоимость проекта?
+                        </h4>
+                        <button class="faq-more-btn">
+                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
+                        </button>
+                    </li>
+                    <li class="faq-list__item">
+                        <h4 class=" inner-title faq__question">
+                            У меня есть свой проект. Сможем ли мы его доработать <span>/</span> реализовать?
+                        </h4>
+                        <button class="faq-more-btn">
+                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
+                        </button>
+                    </li>
+                    <li class="faq-list__item">
+                        <h4 class=" inner-title faq__question">
+                            Я выбираю между разными компаниями. В чём ваше отличие?
+                        </h4>
+                        <button class="faq-more-btn">
+                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
+                        </button>
+                    </li>
+                    <li class="faq-list__item">
+                        <h4 class=" inner-title faq__question">
+                            Могу ли я делегировать вам работу <span>/</span> согласование с подрядчиком <span>/</span> организацией?
+                        </h4>
+                        <button class="faq-more-btn">
+                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
+                        </button>
+                    </li>
+                    <li class="faq-list__item">
+                        <h4 class=" inner-title faq__question">
+                            Могу ли я вернуть деньги на каком-либо из этапов работ?
+                        </h4>
+                        <button class="faq-more-btn">
+                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
-    <footer>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-wrapper">
+                <div class="footer-info-container footer-info">
+                    <a href="#" class="footer-logo">
+                        <img src="/src/img/content/footer-logo.svg" alt="Евклид - Проектные решения">
+                    </a>
+                    <p class="footer-info__text">
+                        Высокий уровень вовлечения представителей целевой аудитории является четким доказательством
+                        простого
+                        факта: разбавленное изрядной долей эмпатии, рациональное мышление позволяет оценить значение
+                        модели
+                        развития. Таким образом, консультация с широким активом обеспечивает широкому кругу
+                        (специалистов)
+                        участие в формировании стандартных подходов.
+                    </p>
+                    <div class="social-links-container">
+                        <ul class="social-links">
+                            <li class="social-links__item">
+                                <a href="#">
+                                    <img src="/src/img/decor/fb.svg" alt="Facebook ссылка">
+                                </a>
+                            </li>
+                            <li class="social-links__item">
+                                <a href="#">
+                                    <img src="/src/img/decor/vk.svg" alt="ВКонтакте ссылка">
+                                </a>
+                            </li>
+                            <li class="social-links__item">
+                                <a href="#">
+                                    <img src="/src/img/decor/instagram.svg" alt="Instagram сссылка">
+                                </a>
+                            </li>    
+                        </ul>
+                    </div>
+                </div>
+                <div class="request-container request">
+                    <h3 class="request__title">
+                        Оставить заявку
+                    </h3>
+                    <form class="request-form" action="action.php">
+                        <input type="text" placeholder="Фамилия, имя и отчество*">
+                        <input type="text" placeholder="E-mail*">
+                        <textarea name="" id="" rows="5" placeholder="Сообщение"></textarea>
+                        <div class="request-action-container">
+                            <input type="submit" value="Отправить данные">
+                            <div class="convention">
+                                <input id="convention__box" type="checkbox" checked>
+                                <label for="convention__box">Согласен на обработку данных</label>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="footer-links-container">
+                    <ul class="footer-links">
+                        <li class="footer-link">
+                            <a href="#">
+                                О нас
+                            </a>
+                        </li>
+                        <li class="footer-link">
+                            <a href="#">
+                                Проекты
+                            </a>
+                        </li>
+                        <li class="footer-link">
+                            <a href="#">
+                                Отзывы
+                            </a>
+                        </li>
+                        <li class="footer-link">
+                            <a href="#">
+                                Договор оферты
+                            </a>
+                        </li>
+                        <li class="footer-link">
+                            <a href="#">
+                                Договор подряда
+                            </a>
+                        </li>
+                        <li class="footer-link">
+                            <a href="#">
+                                Конфеденциальность
+                            </a>
+                        </li>
+                        <li class="footer-link">
+                            <a href="#">
+                                Партнёроское соглашение
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
     </footer>
 </body>
