--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         </li>
                         <li class="footer-link">
                             <a href="#">
-                                Партнёроское соглашение
+                                Партнёрское соглашение
                             </a>
                         </li>
                     </ul>
