--- a/index.html
+++ b/index.html
@@ -82,8 +82,12 @@
                     занимаемых участниками в отношении поставленных задач. Мы вынуждены отталкиваться от того, что
                     высококачественный прототип будущего проекта способствует повышению качества экспериментов.
                 </p>
+            </div>
+        </section>
 
-                <article class="approaches">
+        <section class="approaches">
+            
+                <div class="container">
                     <div class="approaches-wrapper">
                         <div class="approaches-picture">
                             <div class="approaches-picture__content">
@@ -121,8 +125,8 @@
                             </ul>
                         </div>
                     </div>
-                </article>
-            </div>
+                </div>
+                    
         </section>
 
         <section class="our-work">
