--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
             
                 <div class="container">
                     <div class="approaches-wrapper">
-                        <div class="approaches-picture">
-                            <div class="approaches-picture__content">
+                        <picture class="approaches-picture">
+                            <img class="approaches-picture__img" src="/src/img/decor/about-img.jpg" alt=" Процесс работы">
+                            <figcaption class="approaches-picture__content">
                                     <p>
                                         Принимая во внимание показатели успешности, перспективное планирование способствует
                                         подготовке и реализации новых принципов.
@@ -98,8 +99,8 @@
                                     <a href="#" class="more-btn">
                                         Подробнее
                                     </a>
-                            </div>
-                        </div>
+                            </figcaption>
+                        </picture>
                         <div class="approaches-list">
                             <ul class="approaches-items">
                                 <li class="approaches-items__item consult-approach">
@@ -184,49 +185,55 @@
                 </h3>
                 <ul class="faq-list">
                     <li class="faq-list__item">
-                        <h4 class=" inner-title faq__question">
-                            Из чего формируется конечная стоимость проекта?
-                        </h4>
-                        <button class="faq-more-btn">
-                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
-                        </button>
+                        <details>
+                            <summary>
+                                <h4 class=" inner-title faq__question">
+                                    Из чего формируется конечная стоимость проекта?
+                                </h4>
+                            </summary>
+                        </details>
                     </li>
                     <li class="faq-list__item">
-                        <h4 class=" inner-title faq__question">
-                            У меня есть свой проект. Сможем ли мы его доработать <span>/</span> реализовать?
-                        </h4>
-                        <button class="faq-more-btn">
-                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
-                        </button>
+                        <details>
+                            <summary>
+                                <h4 class=" inner-title faq__question">
+                                    У меня есть свой проект. Сможем ли мы его доработать <span>/</span> реализовать?
+                                </h4>
+                            </summary>
+                        </details>                        
                     </li>
                     <li class="faq-list__item">
-                        <h4 class=" inner-title faq__question">
-                            Я выбираю между разными компаниями. В чём ваше отличие?
-                        </h4>
-                        <button class="faq-more-btn">
-                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
-                        </button>
+                        <details>
+                            <summary>
+                                <h4 class=" inner-title faq__question">
+                                    Я выбираю между разными компаниями. В чём ваше отличие?
+                                </h4>
+                            </summary>
+                        </details>
                     </li>
                     <li class="faq-list__item">
-                        <h4 class=" inner-title faq__question">
-                            Могу ли я делегировать вам работу <span>/</span> согласование с подрядчиком <span>/</span> организацией?
-                        </h4>
-                        <button class="faq-more-btn">
-                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
-                        </button>
+                        <details>
+                            <summary>
+                                <h4 class=" inner-title faq__question">
+                                    Могу ли я делегировать вам работу <span>/</span> согласование с подрядчиком <span>/</span> организацией?
+                                </h4>
+                            </summary>
+                        </details>
                     </li>
                     <li class="faq-list__item">
-                        <h4 class=" inner-title faq__question">
-                            Могу ли я вернуть деньги на каком-либо из этапов работ?
-                        </h4>
-                        <button class="faq-more-btn">
-                            <img src="/src/img/content/faq-more-btn.svg" alt="Показать полностью">
-                        </button>
+                        <details>
+                            <summary>
+                                <h4 class=" inner-title faq__question">
+                                    Могу ли я вернуть деньги на каком-либо из этапов работ?
+                                </h4>
+                            </summary>
+                        </details>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
+
     <footer class="footer">
         <div class="container">
             <div class="footer-wrapper">
