--- a/index.html
+++ b/index.html
@@ -50,18 +50,21 @@
     <main>
 
         <section class="promo">
-            <div class="container promo-container">
-                <div class="promo-content-container">
-                    <h1 class="main-title">
-                        Проектные решения любой сложности
-                    </h1>
-                    <p class="promo-description">
-                        Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются уделом
-                        проектантов
-                    </p>
-                    <a href="#" class="promo-button">
-                        Заказать расчет
-                    </a>
+            <div class="container">
+                <div class="container promo-container">
+                    <div class="promo-content-container">
+                        <h1 class="main-title">
+                            Проектные решения любой сложности
+                        </h1>
+                        <p class="promo-description">
+                            Есть над чем задуматься: базовые сценарии поведения пользователей и по сей день остаются
+                            уделом
+                            проектантов
+                        </p>
+                        <a href="#" class="promo-button">
+                            Заказать расчет
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
