--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="approaches-list__item improve-approach">
+                                <li class="approaches-items__item improve-approach">
                                     <div class="approaches-item-wrapper">
                                         <h4 class="inner-title approaches-item-title">
                                             В своём стремлении повысить
@@ -282,7 +282,7 @@
                         <input type="text" placeholder="E-mail*">
                         <textarea name="" id="" rows="5" placeholder="Сообщение"></textarea>
                         <div class="request-action-container">
-                            <input type="submit" value="Отправить данные">
+                            <input class="request-form__submit" type="submit" value="Отправить данные">
                             <div class="convention">
                                 <input id="convention__box" type="checkbox" checked>
                                 <label for="convention__box">Согласен на обработку данных</label>
