--- a/index.html
+++ b/index.html
@@ -324,6 +324,9 @@
                     </form>
                 </div>
                 <div class="footer-links-container">
+                    <a href="#" class="links-logo">
+                        <img src="/src/img/content/footer-logo.svg" alt="Евклид - Проектные решения">
+                    </a>
                     <ul class="footer-links">
                         <li class="footer-link">
                             <a href="#">
@@ -360,6 +363,23 @@
                                 Партнёрское соглашение
                             </a>
                         </li>
+                    </ul>
+                    <ul class="social-links footer-links-social">
+                        <li class="social-links__item">
+                            <a href="#">
+                                <img src="/src/img/decor/fb.svg" alt="Facebook ссылка">
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="#">
+                                <img src="/src/img/decor/vk.svg" alt="ВКонтакте ссылка">
+                            </a>
+                        </li>
+                        <li class="social-links__item">
+                            <a href="#">
+                                <img src="/src/img/decor/instagram.svg" alt="Instagram сссылка">
+                            </a>
+                        </li>    
                     </ul>
                 </div>
             </div>
