Начинаю адаптив с 1024 и ниже

--- a/index.html
+++ b/index.html
@@ -43,19 +43,21 @@
                     </a>
                 </li>
             </ul>
-            <button type="button" class="main-header__search">
-                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 26 26">
-                    <path fill="#333" d="M19.51 18.547l5.658 5.657-1.415 1.414-5.656-5.657z" />
-                    <circle cx="11.5" cy="11.5" r="10.5" stroke="#333" stroke-width="2" />
-                </svg>
-            </button>
-            <button type="button" class="main-header__burger-menu">
-                <svg width="30" height="23" viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect width="30" height="3" fill="#333333" />
-                    <rect y="10" width="30" height="3" fill="#333333" />
-                    <rect y="20" width="30" height="3" fill="#333333" />
-                </svg>
-            </button>
+            <div class="buttons">
+                <button type="button" class="main-header__search">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="#ffffff" viewBox="0 0 26 26">
+                        <path fill="#333" d="M19.51 18.547l5.658 5.657-1.415 1.414-5.656-5.657z" />
+                        <circle cx="11.5" cy="11.5" r="10.5" stroke="#333" stroke-width="2" />
+                    </svg>
+                </button>
+                <button type="button" class="main-header__burger-menu">
+                    <svg width="30" height="23" viewBox="0 0 30 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="30" height="3" fill="#333333" />
+                        <rect y="10" width="30" height="3" fill="#333333" />
+                        <rect y="20" width="30" height="3" fill="#333333" />
+                    </svg>
+                </button>
+            </div>
         </nav>
     </header>
 
